# self-driving

./: .gitignore  README.md  gitignore.save  turtlesim
bumperbot_ws/: .gitignore
bumperbot_ws/devel/: .catkin  _setup_util.py  local_setup.sh
bumperbot_ws/devel/lib/bumperbot_examples/: simple_cpp_publisher  simple_cpp_subscriber
bumperbot_ws/devel/lib/pkgconfig/: bumperbot_description.pc  bumperbot_examples.pc
bumperbot_ws/devel/share/bumperbot_description/cmake/: bumperbot_descriptionConfig.cmake
bumperbot_ws/devel/share/bumperbot_examples/cmake/: bumperbot_examplesConfig.cmake
bumperbot_ws/src/bumperbot_controller/: package.xml
bumperbot_ws/src/bumperbot_controller/launch/: controller.launch
bumperbot_ws/src/bumperbot_description/: package.xml
bumperbot_ws/src/bumperbot_description/launch/: display.launch  gazebo.launch
bumperbot_ws/src/bumperbot_description/rviz/: display.rviz
bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf  bumperbot.urdf.xacro  bumperbot_gazebo.xacro
bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_examples/config/: simple_configuration.yaml
bumperbot_ws/src/bumperbot_examples/include/bumperbot_examples/: turtlesim_kinematics.h
bumperbot_ws/src/bumperbot_examples/nodes/: simple_publisher.cpp  simple_subscriber.cpp  turtlesim_kinematics_node.cpp
bumperbot_ws/src/bumperbot_examples/src/: turtlesim_kinematics.cpp
